refactor(build): clean up root pom.xml
Removed unused setting to fix warnings.

Co-authored-by: Maren Nodenes-Fimland <marennod@stud.ntnu.no>

#136